--- a/examples/loading-maps/index.html
+++ b/examples/loading-maps/index.html
@@ -8,12 +8,12 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
     <body>
-        <script src="pkg/loading_maps.js"></script>
         <script type=module>
-         window
-             .wasm_bindgen('pkg/loading_maps_bg.wasm')
-             .then( m => m.main() )
-             .catch(console.error);
+        import init, { main } from './pkg/loading_maps.js';
+        window.addEventListener('load', async () => {
+            await init();
+            await main();
+        });
         </script>
     </body>
 </html>
